# Mower_robot

./: .gitignore  calibrate_wheel_radius.py  calibrate_wheel_separation_live.py  record_motion_diag.sh  run_pc_nav_stack.sh  start_mower.sh
src/: imu_node.py
src/bno080_ros2/: package.xml  setup.cfg  setup.py
src/bno080_ros2/bno080_ros2/: imu_node.py
src/mower_control_ros2/: CMakeLists.txt  package.xml
src/mower_control_ros2/src/: arduino_interface_node.cpp  xbox_command_mapper.cpp  xbox_controller_launch.py
src/my_bot/config/: ekf.yaml  ekf_odom_only.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  scan_filter.yaml  twist_mux.yaml
src/my_bot/description/: imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_bot/launch/: joystick.launch.py  launch_robot.launch.py  rplidar.launch.py  rsp.launch.py
src/sllidar_ros2/launch/: view_sllidar_c1_launch.py
