<?xml version="1.0"?>
<package format="3">
  <name>mower_control_ros2</name>
  <version>0.0.1</version>
  <description>ROS2 package for interfacing with an Arduino that controls a mower.</description>
  <maintainer email="your_email@example.com">hevrosy</maintainer>
  <license>Apache-2.0</license>

 
  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

   <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>